--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,12 +9,10 @@ server.port=8080
 
 
 spring.jpa.show-sql=true
-
-
 spring.profiles.active=test
-
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true 
 
 
 
